Changes - Enabled browsing of media items

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">HearMeOut</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="song_art">Song related art-media</string>
+    <string name="song_play_state">Song\'s playing state</string>
 </resources>
